crates/pika_cli/tests/snapshots/run_programs__run_programs@panic_wide_multiply.pk.snap
---
source: crates/pika_cli/tests/run_programs.rs
expression: "run_both(dir, &name, &name)"
input_file: crates/pika_cli/tests/run/panic_wide_multiply.pk
---
exit: 101
--- stdout ---
--- stderr ---
panic: integer overflow
  at panic_wide_multiply.pk:3:11
    3 |     :put ($big * $big)
      |           ^
